# bili-summary

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  server.py
.claude/: settings.local.json
docs/: api-reference.md  feishu-setup.md  user-guide.md
docs/architecture/: prompt-v3-review.md
extension/: background.js  content.css  content.js  manifest.json
raycast-extension/: package-lock.json  package.json  raycast-env.d.ts  tsconfig.json
raycast-extension/src/: bili-summary.ts  open-history.tsx  summarize-clipboard.tsx  summarize.tsx
scripts/: pre-push
src/bili_summary/: __init__.py  __main__.py  cli.py  config.py
src/bili_summary/auth/: cookie_store.py  login.py
src/bili_summary/bilibili/: client.py  subtitle.py  video_info.py  wbi.py
src/bili_summary/output/: writer.py
src/bili_summary/storage/: __init__.py  db.py
src/bili_summary/summarizer/: engine.py
src/bili_summary/sync/: __init__.py  feishu.py
src/bili_summary/web/: __init__.py  api.py  ui.py
src/bili_summary/web/templates/: base.html  detail.html  index.html
tests/: test_engine.py  test_subtitle.py  test_wbi.py  test_writer.py
